snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-all.jar.sha512
8d4a03f330097a39d2b01c88ea9113663bd5c1a44253a66814a6976126d54a978b7da4e0766bd1760e2a8d104c04ddafc6dad215a086c02adedda1063d9777a9